Fri Nov 15 15:29:24 2002  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/tests/Notify/Basic/run_test.pl:
	  Modified to run the basic tests with a reactive and
	  multithreaded Notification.
	* orbsvcs/tests/Notify/Basic/notify.mt.conf:
	  Added MT conf for the Basic test.
	* orbsvcs/tests/Notify/Basic/notify.reactive.conf:	
	  Added reactive conf for the Basic test.

	* orbsvcs/tests/Notify/Blocking/notify.conf:
	* orbsvcs/tests/Notify/Discarding/notify.conf:
	* orbsvcs/tests/Notify/MT_Dispatching/notify_mtdispatching.conf:
	* orbsvcs/tests/Notify/Ordering/notify.conf:
	* orbsvcs/tests/Notify/Sequence_Multi_ETCL_Filter/notify.conf:
	* orbsvcs/tests/Notify/Sequence_Multi_Filter/notify.conf
	* orbsvcs/tests/Notify/performance-tests/Filter/notify.conf
	* orbsvcs/tests/Notify/performance-tests/RedGreen/listener.conf
	* orbsvcs/tests/Notify/performance-tests/RedGreen/lookup.conf
	* orbsvcs/tests/Notify/performance-tests/RedGreen/reactive.conf
	* orbsvcs/logging_service/notify_logging_service/svc.conf:
	* orbsvcs/Notify_Service/svc.conf:
	  Reverted factory back to
	  Notify_Default_Event_Manager_Objects_Factory.
 	  I have decided not to introduce any changes for Notify Options in
	  TAO 1.3.
	  Better replacements will be introduced gradually in subsequent releases.	

	* orbsvcs/Notify_Service/Notify_Server.cpp:
 	  Not handling signals. 
	  The shutdown code and event handler is maintained in case we want to address this in the future.

	* orbsvcs/tests/Notify/performance-tests/RedGreen/run_test.pl:
	  - Modified to run all 3 test cases described in the README.   	    
	* orbsvcs/tests/Notify/performance-tests/RedGreen/Red
	 
	* orbsvcs/tests/Notify/Discarding/Notify_Structured_Push_Consumer.cpp:
	  Changed hardcoded "10" to the expected number of events that can
	  be specified on the command line.
	
	* orbsvcs/tests/Notify/Discarding/Sequence_Consumer.cpp:	  
	  - Changed low=2 and high=20. Here is the explaination: