@@ -1,3 +1,9 @@
+Sat Nov 16 20:11:13 2002  Pradeep Gore  <pradeep@oomworks.com>
+
+	* orbsvcs/orbsvcs/Notify/ThreadPool_Task.cpp:
+	- Modified threadpool creation flags to ACE_Task::activate.
+	- Corrected decrement of <queue_length_>.
+
 Fri Nov 15 15:29:24 2002  Pradeep Gore  <pradeep@oomworks.com>
 
 	* orbsvcs/tests/Notify/Basic/run_test.pl:
